file name change

--- a/Word_freq.ipynb
+++ b/Word_freq.ipynb
@@ -110,24 +110,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86167d4a",
+   "id": "de54e666",
    "metadata": {},
    "source": [
-    "# Concurrent"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "85646907",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(stop_words_file, 'r') as stop_words_file:\n",
-    "    stop_words = set(stop_words_file.read().split())\n",
-    "\n",
-    "sentence = 'But January 1980 was arguably a “freak peak” during a period of heightened geo-political instability. At $1,300, today’s price is probably more than double very long-term, inflation-adjusted, average gold prices.'\n",
-    "words = sentence.split()\n"
+    "# Multi-processing"
    ]
   },
   {
@@ -186,14 +172,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#analyze performance \n",
-    "\n",
-    "\n",
     "def analyze_performance(filepath):\n",
     "    # Start measuring time\n",
     "    start_time = time.time()\n",
     "\n",
-    "    # get top k words \n",
+    "    # get top k words\n",
     "    analyzer = TextAnalyze(\"dataset/stopwords\")\n",
     "    analyzer.process_text_file(filepath)\n",
     "    top_words = analyzer.get_top_words(10)\n",
